# Surveillance-Antz

./: .gitignore  .~lock.Surveillance-Antz-Technical-Documentation.docx#  ARCHITECTURE.md  INTEGRATION.md  LICENSE  README.md  Surveillance-Antz-Technical-Documentation.docx  reset.sh  run.sh  run_all.sh
contracts/: README.md  (+2 more)
surveillance_brain/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  import_employees.py  pyproject.toml  requirements.txt  run_native.sh
surveillance_brain/.github/: PULL_REQUEST_TEMPLATE.md
surveillance_brain/alembic/: env.py
surveillance_brain/api/: __init__.py  auth.py  main.py  schemas.py
surveillance_brain/config/: __init__.py  admin.py  matching.py  postgres.py  qdrant.py  redis.py  session.py  settings.py  storage.py
surveillance_brain/db/: __init__.py  connection.py  models.py  vector_store.py
surveillance_brain/repositories/: __init__.py  audit_repo.py  camera_repo.py  embedding_repo.py  event_repo.py  identity_repo.py  session_repo.py
surveillance_brain/scripts/: export_tracks.py  prune_events.py  seed.py
surveillance_brain/services/: __init__.py  archive_service.py  calibration_service.py  conversion_service.py  dedup_service.py  enrollment_service.py  feature_matcher.py  identity_resolver.py  import_service.py  ingestion_service.py  live_broadcaster.py  log_service.py  media_paths.py  occupancy_service.py  presence_cache.py  search_service.py  session_tracker.py
surveillance_brain/tests/: __init__.py  conftest.py  test_sightings_rework.py  test_smoke.py
(+133 files in other folders)
